Heavy refactoring of Codec/CodecDescriptor Also lots of fixes and updates to UserpReader/writer Updated the test cases, and serialization of type definitions is getting close